--- a/views/404.html
+++ b/views/404.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <h1>Error: Page Not Found</h1>
+    <h1>404 Error: Page Not Found</h1>
     <p>Page you are looking for does not exist</p>
 </body>
 </html>
