Saving data as JSON in file and retrieving it.

--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -11,7 +11,7 @@
             {
         %>
         <ul>
-            <li><%=p%></li>
+            <li><%=p.title%></li>
         </ul>
         <%}%>
     </p>
