--- a/views/adminHome.ejs
+++ b/views/adminHome.ejs
@@ -7,4 +7,7 @@
         <a href="/admin">Admin-Home</a>
         <a href="/">Shop</a>
     </nav>
+    <main>
+        <iframe src="http://localhost:3002" style="width: 30vw;height: 80vh;display: block; margin: auto;"></iframe>
+    </main>
 <%- include('includes/foot.ejs'); -%>
