Shop structure made: using local MongoDB server

--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -9,8 +9,20 @@
     </nav>
     <div class="formBox">
     <form action="/admin/add-product" method="post">
-        <label><b>Add-Product</b></label><br>
-        <input type="text" name="title" placeholder="eg: Chocolate"><br>
+        <label><b>productName:</b></label><br>
+        <input type="text" name="productName" placeholder=""><br>
+        <label><b>costPrice:</b></label><br>
+        <input type="number" name="costPrice" placeholder=""><br>
+        <label><b>sellingPrice:</b></label><br>
+        <input type="number" name="sellingPrice" placeholder=""><br>
+        <label><b>markedPrice:</b></label><br>
+        <input type="number" name="markedPrice" placeholder=""><br>
+        <label><b>description:</b></label><br>
+        <input type="text" name="description" placeholder=""><br>
+        <label><b>unitsAvailable:</b></label><br>
+        <input type="number" name="unitsAvailable" placeholder=""><br>
+        <label><b>imgUrl:</b></label><br>
+        <input type="text" name="imgUrl" placeholder=""><br>
         <button type="submit">submit</button>
     </form>
     </div>
