--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,7 +12,7 @@ h1.header
     margin: 0px;
 }
 
-a:link, a:hover, a:visited
+nav a:link, nav a:hover, nav a:visited
 {
     text-decoration: none;
     padding: 15px 15px;
@@ -21,11 +21,11 @@ a:link, a:hover, a:visited
     margin: 0px;
     line-height: 30px;
 }
-a.active
+nav a.active
 {
-    background-color: rgb(32, 32, 32);
+    background-color: #444444;
 }
-a:hover
+nav a:hover
 {
     background-color: rgb(150, 150, 150);
     color: black;
@@ -61,7 +61,12 @@ button
 {
     margin: 10px;
 }
-
+footer
+{
+    color: #ffffff;
+    padding: 60px 20px;
+    background-color: rgb(72, 3, 99);
+}
 @media only screen and (min-width: 700px) 
 {
     div.formBox
