--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -3,5 +3,5 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title><%=docTitle%></title>
+    <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
