Details dynamic route added

--- a/public/css/products.css
+++ b/public/css/products.css
@@ -38,10 +38,22 @@ img.productImg
 {
     background-color: #888888;
 }
+table.detailsTable
+{
+    display: block; 
+    margin:30px auto;
+    width: 90%;
+}
+
 @media screen and (min-width: 700px)
 {
     div.box
     {
         width: 30%;
-    }    
+    }
+    table.detailsTable
+    {
+        width: 50%;
+    }
+    
 }
