--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -25,8 +25,8 @@
                     <%=p.description%>
                 </p>
                 <div class="container bttns">
-                    <a  href="" style=""><b>AddToCart</b></a>
-                    <a style="" href=""><b>Details</b></a>
+                    <a  href=""><b>AddToCart</b></a>
+                    <a href="/details/<%=p._id%>"><b>Details</b></a>
                 </div>
             </div>
        <%
