Details: advanced routing & Sign IN and Login: without session and cookies.

--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -7,6 +7,18 @@
         <a href="/" class="active">shop</a>
         <a href="/cart">cart</a>
     </nav>
+    
+    <div class="box" style="text-align:center"> 
+            <img src="<%=user.displayPicture%>" style="max-width: 100%;width: 30%;border-radius: 50%;display: block;margin: auto;">
+            <span style="font-size: 25px;">
+            <%=user.firstName%>
+            <%=user.lastName%>
+            </span>
+            <div class="container">
+                <a href="/" style="width: 40%;display: block;margin: auto;background-color: green;color: white;text-decoration:none;padding: 5px;border-radius: 5px;">EditProfile</a>
+                <a href="/" style="width: 40%;display: block;margin: auto;background-color: green;color: white;text-decoration:none;padding: 5px;border-radius: 5px;">SignOut</a>
+            </div>
+    </div>
     <div class="container">
        <%
             for(let p of result)
